[vmutils] Allow convertion of relative file to URL.
close #173

Signed-off-by: Stéphane Galland <galland@arakhne.org>